Replace gift and message images with new icons

--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@ button:hover{transform:scale(1.1);}
 <h2>Open Your Gifts Kaju 🎁</h2>
 
 <div class="giftBox" onclick="openGift(this); setTimeout(()=>show('loveMsg'),700)">
-  <img class="giftLid" src="https://i.imgur.com/2QJt1jM.png">
-  <img class="giftBody" src="https://i.imgur.com/2QJt1jM.png">
+  <img class="giftLid" src="https://cdn-icons-png.flaticon.com/512/833/833472.png">
+  <img class="giftBody" src="https://cdn-icons-png.flaticon.com/512/833/833472.png">
 </div>
 
 <div class="giftBox" onclick="openGift(this); setTimeout(()=>show('p2'),700)">
-  <img class="giftLid" src="https://i.imgur.com/2QJt1jM.png">
-  <img class="giftBody" src="https://i.imgur.com/2QJt1jM.png">
+  <img class="giftLid" src="https://cdn-icons-png.flaticon.com/512/833/833472.png">
+  <img class="giftBody" src="https://cdn-icons-png.flaticon.com/512/833/833472.png">
 </div>
 
 <button class="arrow" onclick="show('p1')">←</button>
@@ -150,7 +150,7 @@ button:hover{transform:scale(1.1);}
 
 <div id="loveMsg" class="page">
 <h2>Everything I Love About You 💖</h2>
-<img src="https://i.imgur.com/ZG6j8kP.png" width="250"><br>
+<img src="https://cdn-icons-png.flaticon.com/512/1077/1077035.png" width="250"><br>
 <p>
 Bhumi, your smile, your voice, your anger, your cuteness—  
 everything about you drives me crazy in the best way ❤️  
@@ -160,7 +160,7 @@ everything about you drives me crazy in the best way ❤️
 
 <div id="p2" class="page">
 <h2>Bhumi 💍 Will You Be My Valentine?</h2>
-<img class="ring" src="https://i.imgur.com/7kZQ9bP.png"><br>
+<img class="ring" src="https://cdn-icons-png.flaticon.com/512/616/616490.png"><br>
 <button class="yes" onclick="finalYes()">YES 😍</button>
 <button class="no" onclick="insult()">NO</button>
 </div>
