--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@ button{
 .yes{background:red;color:white;}
 .no{background:white;color:red;border:2px solid red;}
 
+.bus{
+  position:absolute;
+  bottom:100px;
+  left:-300px;
+  width:220px;
+  transition:3s ease;
+}
+
+/* Gift styles */
 .giftBox{
   width:180px;
   margin:30px auto;
@@ -70,6 +79,7 @@ button{
   transform:translateX(-50%) scale(1);
 }
 
+/* hearts */
 .heart{
   position:fixed;
   bottom:-40px;
@@ -85,19 +95,51 @@ button{
 
 <body>
 
+<!-- PAGE 1 -->
 <div id="p1" class="page" style="display:block;">
-<h2>Hey Kaju 💕 I have a gift for you</h2>
+<h2>Hey Kaju 💕 I have something for you</h2>
+<button class="yes" onclick="busPage()">See it</button>
+</div>
+
+<!-- BUS PAGE -->
+<div id="busPage" class="page">
+<h2>Special delivery for Bhumi 🚍</h2>
+<img id="bus" class="bus"
+src="https://cdn-icons-png.flaticon.com/512/61/61231.png">
+</div>
+
+<!-- GIFT PAGE -->
+<div id="giftPage" class="page">
+<h2>Your Gift 🎁</h2>
 
 <div class="giftBox" onclick="openGift(this)">
-  <img class="giftLid" src="https://cdn-icons-png.flaticon.com/512/833/833472.png">
-  <img class="giftBody" src="https://cdn-icons-png.flaticon.com/512/833/833472.png">
+  <img class="giftLid"
+  src="https://cdn-icons-png.flaticon.com/512/833/833472.png">
+  <img class="giftBody"
+  src="https://cdn-icons-png.flaticon.com/512/833/833472.png">
+
+  <!-- Bhumi photo -->
   <img class="photo" src="bhumi.png">
 </div>
 
-<p>Tap the gift 🎁</p>
+<p>Tap the gift</p>
 </div>
 
 <script>
+function show(id){
+ document.querySelectorAll(".page").forEach(p=>p.style.display="none");
+ document.getElementById(id).style.display="block";
+}
+
+function busPage(){
+ show("busPage");
+ let bus=document.getElementById("bus");
+ bus.style.left="-300px";
+ setTimeout(()=>bus.style.left="50%",100);
+ setTimeout(()=>bus.style.transform="translateX(-50%)",100);
+ setTimeout(()=>show("giftPage"),3200);
+}
+
 function openGift(g){
  g.classList.add("giftOpen");
  startHearts();
